# asteroids

./: .clang-format  .clang-tidy  .editorconfig  .gitmodules  CMakeLists.txt  README.md  build-and-run.sh
libs/glad/: README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/linmath/: CMakeLists.txt  README.md
libs/stb/: CMakeLists.txt
resources/shaders/: README.md  default.frag  default.vert  default_frag.glsl  default_vert.glsl  glyph.frag  glyph.vert  glyph_frag.glsl  glyph_vert.glsl  vertex.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  GameActor.cpp  GameActor.h  GameComponent.h  GameObjectFactory.cpp  GameObjectFactory.h  GlWindow.cpp  GlWindow.h  GraphicsComponent.cpp  GraphicsComponent.h  InputComponent.h  KeyboardInputComponent.cpp  KeyboardInputComponent.h  MoonPhysicsComponent.cpp  MoonPhysicsComponent.h  NullInputComponent.h  OpenglException.h  PhysicsComponent.h  Renderable.h  RenderableObject.h  Renderer.cpp  Renderer.h  ResourceId.h  ServiceLocator.cpp  ServiceLocator.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramRegistry.cpp  ShaderRegistry.cpp  ShaderRegistry.h  Spaceship.cpp  Spaceship.h  TickLimiter.cpp  TickLimiter.h  (+9 more)
src/common/: Result.h  SignalHandler.cpp  SignalHandler.h  assertions.h  debug.h  dump.cpp  dump.h  error.h  fileutils.cpp  fileutils.h  panic.h  strutils.h  timeutils.cpp  timeutils.h  try.h
src/engine/: Camera.cpp  Camera.h  CameraDirector.h  ElementBufferObject.cpp  ElementBufferObject.h  Font.cpp  Font.h  FontBitmapCache.cpp  FontBitmapCache.h  FontBitmapMap.cpp  FontBitmapMap.h  FontManager.cpp  FontManager.h  GlfwContext.cpp  GlfwContext.h  Image.cpp  Image.h  KeyEvent.h  KeyEventDispatcher.cpp  KeyEventDispatcher.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  MouseEventDispatcher.cpp  MouseEventDispatcher.h  MouseKeyboardCameraDirector.cpp  MouseKeyboardCameraDirector.h  OpenGlObject.cpp  OpenGlObject.h  OpenglException.h  RateCounter.cpp  RateCounter.h  RenderableObject.h  RenderableText.h  Resource.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  (+16 more)
src/opengl/: GlfwContext.cpp  GlfwContext.h  KeyEvent.h  KeyEventDispatcher.cpp  KeyEventDispatcher.h  Keyboard.cpp  Keyboard.h  OpenglException.h  RenderableObject.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramRegistry.cpp  ShaderProgramRegistry.h  Window.cpp  Window.h  opengl.h
tests/: CMakeLists.txt  Result.cpp  strutils.cpp  timeutils.cpp
